examples/c/error-codes/violates-constraint/fatal/CV-FD2-bad-static.output
CV-FD2-bad-static.c:7:8: error: function cannot return array type 'arr' (aka 'int [5]')
arr foo() {
       ^
CV-FD2-bad-static.c:8:10: warning: incompatible pointer to integer conversion returning 'int [5]' from a function with result type 'int' [-Wint-conversion]
  return x;
         ^
1 warning and 1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-lvrAI/pp-4P2zj.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
